--- a/index.html
+++ b/index.html
@@ -1243,7 +1243,7 @@
                 <div class="row">
                     <div class="col-xs-12">
                         <div class="footer_bottom">
-                            <p>Made with <i class="icofont icofont-heart"></i> by <a href="#">ClassyFort</a></p>
+                            <p><i class="icofont icofont-heart"></i> by <a href="#"></a></p>
                         </div>
                         <!-- Bottom Footer Copywrite Text Area End -->
                     </div>
