--- a/index.html
+++ b/index.html
@@ -1217,10 +1217,10 @@
         </div>
     </section>
 
-    <div class="map_contact_address_area">
+    
         <!-- Map Area Start -->
-        <div class="map_area" id="googleMap"></div>
-    </div>
+  
+
     <!-- >>>>>>>>>>>>>>>> Message Now Area Start <<<<<<<<<<<<<<<< -->
 
     <!-- >>>>>>>>>>>>>>>> Footer Area Start <<<<<<<<<<<<<<<< -->
@@ -1243,7 +1243,7 @@
                 <div class="row">
                     <div class="col-xs-12">
                         <div class="footer_bottom">
-                            <p><i class="icofont icofont-heart"></i> by <a href="#"></a></p>
+                            <p>Made With<i class="icofont icofont-heart"></i><a href="#"></a></p>
                         </div>
                         <!-- Bottom Footer Copywrite Text Area End -->
                     </div>
