--- a/index.html
+++ b/index.html
@@ -995,13 +995,13 @@
                         <div class="single_latest_news_text_area">
                             <!-- single latest news title -->
                             <div class="news_title">
-                                <a href="single.html"><h4>Placekeeper For Future.</h4></a>
+                                <a href="blog.html"><h4>Placekeeper For Future.</h4></a>
                             </div>
                             <!-- single latest news excerp -->
                             <div class="news_content">
                                 <p>These highlights are going to be filled with some blog enteries that provide us with stories to remember forever.</p>
                             </div>
-                            <a href="single.html">Read Post</a>
+                            <a href="blog.html">Read Post</a>
                         </div>
                     </div>
                 </div>
@@ -1017,13 +1017,13 @@
                         <div class="single_latest_news_text_area">
                             <!-- single latest news title -->
                             <div class="news_title">
-                                <a href="single.html"><h4>Placekeeper For Future.</h4></a>
+                                <a href="blog.html"><h4>Placekeeper For Future.</h4></a>
                             </div>
                             <!-- single latest news excerp -->
                             <div class="news_content">
                                 <p>These highlights are going to be filled with some blog enteries that provide us with stories to remember forever.</p>
                             </div>
-                            <a href="single.html">Read Post</a>
+                            <a href="blog.html">Read Post</a>
                         </div>
                     </div>
                 </div>
@@ -1039,13 +1039,13 @@
                         <div class="single_latest_news_text_area">
                             <!-- single latest news title -->
                             <div class="news_title">
-                                <a href="single.html"><h4>Placekeeper For Future.</h4></a>
+                                <a href="blog.html"><h4>Placekeeper For Future.</h4></a>
                             </div>
                             <!-- single latest news excerp -->
                             <div class="news_content">
                                 <p>These highlights are going to be filled with some blog enteries that provide us with stories to remember forever.</p>
                             </div>
-                            <a href="single.html">Read Post</a>
+                            <a href="blog.html">Read Post</a>
                         </div>
                     </div>
                 </div>
